修改商品列表样式

--- a/src/static/css/game/list/index.less
+++ b/src/static/css/game/list/index.less
@@ -2,3 +2,44 @@
     background:#f5f5f5;
     font-size: 14px;
 }
+
+.search {
+    height:30px;
+}
+
+.list {
+    display: flex;
+    height:calc(100% - 30px);
+    text-align: center;
+    background:#fff;
+}
+
+.letter {
+    width:50px;
+    overflow-x:hidden;
+    overflow-y:auto;
+}
+
+.letter::-webkit-scrollbar {
+    display: none;
+}
+
+.letter-items {
+    height:30px;
+    line-height: 30px;
+}
+
+.game {
+    flex:1;
+    overflow-x:hidden;
+    overflow-y:auto;
+}
+
+.game::-webkit-scrollbar {
+    display: none;
+}
+
+.game-items {
+    height:60px;
+    line-height: 60px;
+}
