--- a/src/static/css/game/list/index.less
+++ b/src/static/css/game/list/index.less
@@ -1,3 +1,5 @@
+@import '../../common/var.less' ;
+
 .container {
     background:#f5f5f5;
     font-size: 14px;
@@ -32,6 +34,11 @@
     line-height: 40px;
     background:#f2f3f6;
     text-align: center;
+}
+
+.active-letter {
+    background:#fff;
+    color:@red;
 }
 
 .game {
